<resources>
    <string name="app_name">Rhythmix</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fullName">Full Name</string>
    <string name="title_activity_user_profile">userProfile</string>
    <string name="user_name">User Name</string>
    <string name="save">Save</string>
    <string name="newSession">Create a new Karaoke Session</string>
    <string name="sessionName">Enter your session name here!</string>
    <string name="player_error">Error Initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="search">Search</string>
    <string name="failed">Failed</string>
    <string-array name="modes">
        <item>Select a mode</item>
        <item>Sober Mode</item>
        <item>Drunk Mode</item>
    </string-array>
    <string-array name="themes">
        <item>Select a Theme</item>
        <item>4th of July</item>
        <item>Halloween</item>
        <item>Thanksgiving</item>
        <item>Christmas</item>
        <item>Genres</item>
        <item>Pop</item>
        <item>Rock</item>
        <item>Country</item>
        <item>Hip Hop</item>
        <item>No Theme</item>
    </string-array>
    <string name="title_activity_theme">themeActivity</string>
    <string name="now_select_a_theme_bitch">Now select a Theme Bitch!</string>
</resources>
