<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="top"
    android:padding="0dp"
    tools:context="com.example.pranav.karaoke.RegistrationActivity">


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@mipmap/mics"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:fontFamily="cursive"
        android:text="Rythmix"
        android:textColor="#fff"
        android:textSize="100dp"
        android:textStyle="bold"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="311dp"
        android:layout_height="268dp"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingTop="50dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="101dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:textColorHint="#fff"
            android:id="@+id/fullNameEditText">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.03"
                android:background="@color/transparent"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_person_outline_white_24dp"
                android:ems="10"
                android:hint="@string/fullName"
                android:inputType="textPersonName"
                android:textSize="20dp"
                android:paddingBottom="15dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:paddingTop="17dp"
                android:textColor="#9effffff"
                android:textColorHint="#fff" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:textColorHint="#fff"
            android:id="@+id/userNameEditText">


            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.02"
                android:background="@color/transparent"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_mic_none_white_24dp"
                android:ems="10"
                android:hint="@string/user_name"
                android:textSize="20dp"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:paddingTop="17dp"
                android:textColor="#9effffff"
                android:textColorHint="#fff" />

        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_height="50dp"
        android:layout_width="318dp"
        android:textSize="19dp"
        android:textColor="#fff"
        android:backgroundTint="@color/transparent"
        android:text="@string/save"
        tools:layout_editor_absoluteY="314dp"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginBottom="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/linearLayout" />


</RelativeLayout>